exercises/ex2/nginx-tls-route.yaml
---
apiVersion: v1
kind: Route
metadata:
  name: nginx-route
spec:
  to:
    kind: Service
    name: nginx-service
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
